--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
+    "cheerio": "^1.0.0-rc.3",
     "discord.js": "^12.2.0",
     "ffmpeg-static": "^4.2.2",
+    "request": "^2.88.2",
     "yt-search": "^1.1.2",
     "ytdl-core": "^2.1.3"
   }
